# logger

./: .gitignore  CMakeLists.txt  README.md  library.properties  loggerConfig.cmake
example/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  main.c
include/logger/: appender_file.h  appender_udp.h  layout_full.h  layout_simple.h  layout_syslog.h  logger.h
lib/: CMakeLists.txt  appender_console.c  appender_file.c  appender_udp.c  layout_full.c  layout_simple.c  layout_syslog.c  logger.c
logger/: CMakeLists.txt
logger/include/logger/: appender_console.h  layout_full.h  layout_simple.h  logger.h  logger_marcos.h
logger/src/: appender_console.c  appender_file.c  appender_udp.c  default_logger.c  layout_full.c  layout_simple.c  layout_syslog.c  logger.c
src/: CMakeLists.txt  appender_console.c  appender_console.h  appender_file.c  appender_file.h  appender_udp.c  appender_udp.h  layout_full.c  layout_full.h  layout_simple.c  layout_simple.h  layout_syslog.c  layout_syslog.h  logger.c  logger.h
